src/main/java/com/example/solid/ocp/positive/IGreetingType.java
package com.example.solid.ocp.positive;

/**
 * Created by sbiliaiev on 3/4/2018.
 */
public interface IGreetingType {
    String greet();
}
