src/main/java/com/example/solid/ocp/negative/MoneyTransferType.java
package com.example.solid.ocp.negative;

public enum MoneyTransferType {
    WIRE,
    PAYPAL,
    MULTIPLE_CHECKS
}
